# zurihac26

./: .gitignore  LICENSE  README.md  flake.nix  ideas.md  zurihac26.cabal
app/: Main.hs
docs/: socket-design.md
src/: App.hs  HasChan.hs  HasLogger.hs  HasSockets.hs  Lib.hs
test/: Spec.hs
